# myC

./: CMakeLists.txt  README.md  day10.cpp
Day2/: 99multiply.c  narcissus.c  test1.c
Day5/: day5_test.cpp
day3/: d3_test.c
day4/: day4_test.c
day6/: day6_test.cpp  day6_test2.cpp
day7/: day7_test.cpp
day8/: day8_test.cpp  day8_test2.cpp  day8_test3.cpp
day9/: d9_main.cpp  d9_max.h
